--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="theme-color" content="#000000" />
+    <meta name="color-scheme" content="light dark">
     <meta
       name="description"
       content="Web site created using create-react-app"
