add default `title` and `description` (en)

--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <title>LBoL Logs - Run History Sharing</title>
+    <meta name="description" content="LBoL Logs is a run history sharing service of Touhou: Lost Branch of Legend." />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="theme-color" content="#000000" />
     <meta name="color-scheme" content="light dark">
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Google tag (gtag.js) -->
