--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-8Q07V7QP73');
+      gtag('config', 'G-8Q07V7QP73', { send_page_view: false });
     </script>
   </head>
   <body>
