--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,12 @@
     <meta name="color-scheme" content="light dark">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta property="og:title" content="LBoL Logs" />
+    <meta property="og:url" content="%PUBLIC_URL%/" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:site_name" content="LBoL Logs" />
+    <meta name="twitter:card" content="summary" />
+    <link rel="canonical" href="%PUBLIC_URL%/" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8Q07V7QP73"></script>
     <script>
